fix landing display on mobile

--- a/app/assets/stylesheets/facade.css
+++ b/app/assets/stylesheets/facade.css
@@ -1,6 +1,6 @@
 .fullscreen {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 
   display: flex;
   align-items: center;
@@ -9,7 +9,7 @@
 
 .container {
   max-width: 1000px;
-  padding: 48px;
+  padding: 30px;
 }
 
 .row {
